--- a/01. Router/02. NumberBaseball/styles/index.scss
+++ b/01. Router/02. NumberBaseball/styles/index.scss
@@ -1,3 +1,85 @@
-body{
-    background: red;
+.world, .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.world{
+    height: 100vh;
+    .container{
+        width: 500px;
+        height: 500px;
+        border:1px solid #000;
+        border-radius: 10px;
+        flex-direction: column;
+    }
+    .title{
+        font-size: 16px;
+        color: #000;
+    }
+    .result{
+        margin-top: 10px;
+        font-size: 14px;
+        font-weight: bold;
+        color: #222;
+    }
+    form{
+        margin-top: 10px;
+        width: 300px;
+        height: 30px;
+        border: 3px solid #000;
+        border-radius: 5px;
+        font-size: 0;
+        input{
+            width: 85%;
+            height: 100%;
+            text-indent: 10px;
+            font-size: 14px;
+            color: #000;
+            &:focus{
+                outline: none;
+            }
+        }
+        button{
+            display: inline-block;
+            background: none;
+            color: #000;
+            font-size: 20px;
+            cursor: pointer;
+            height: 100%;
+            width: 15%;
+            &:focus{
+                outline: none;
+            }
+        }
+    }
+    ul{
+        margin-top: 10px;
+        max-height: 200px;
+        overflow-y: auto;
+        &::-webkit-scrollbar {
+            width: 10px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: #2f3542;
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: grey;
+            border-radius: 10px;
+        }
+        li{
+            margin: 10px 0;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            width: 300px;
+            font-weight: bold;
+            font-size: 14px;
+            color: #222;
+            & > p{
+                width: 10%;
+            }
+        }
+    }
+
 }
